# obelixlibs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt  Checked.h  Error.cpp  Error.h  FileBuffer.cpp  FileBuffer.h  Format.h  Logging.h  Process.cpp  Process.h  Resolve.cpp  StringBuffer.cpp  StringBuffer.h  StringUtil.cpp  StringUtil.h
core/test/: Resolve.cpp
lexer/: BasicParser.cpp  BasicParser.h  CMakeLists.txt  CommentScanner.cpp  CustomScanner.cpp  IdentifierScanner.cpp  KeywordScanner.cpp  Lexer.cpp  Lexer.h  NumberScanner.cpp  PlainTextParser.cpp  QStringScanner.cpp  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  WhitespaceScanner.cpp
lexer/test/: CMakeLists.txt  CommentTest.cpp  CustomScannerTest.cpp  KeywordTest.cpp  LexerTest.cpp  LexerTest.h  NumberTest.cpp  QStringTest.cpp  WhitespaceTest.cpp
